force-app/main/default/objects/Student__c/fields/fees_submitted__c.field-meta.xml
<CustomField>
    <fullName>fees_submitted__c</fullName>
    <label>fees submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>