force-app/main/default/objects/Student__c/fields/HINDI__c.field-meta.xml
<CustomField>
    <fullName>HINDI__c</fullName>
    <label>HINDI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>