force-app/main/default/objects/Student__c/fields/HOD_Name__c.field-meta.xml
<CustomField>
    <fullName>HOD_Name__c</fullName>
    <label>HOD Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.A</fullName>
            </value>
            <value>
                <fullName>Mr.B</fullName>
            </value>
            <value>
                <fullName>Mr.C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>