force-app/main/default/objects/Student__c/fields/MATH__c.field-meta.xml
<CustomField>
    <fullName>MATH__c</fullName>
    <label>MATH</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>