force-app/main/default/objects/Student__c/fields/OBTAINED_MARKS__c.field-meta.xml
<CustomField>
    <fullName>OBTAINED_MARKS__c</fullName>
    <formula>CHEMISTRY__c  +  ENGLISH__c  +  HINDI__c  +  MATH__c  +  PHYSICS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBTAINED MARKS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>