force-app/main/default/objects/Student__c/fields/PERCENTAGE__c.field-meta.xml
<CustomField>
    <fullName>PERCENTAGE__c</fullName>
    <formula>OBTAINED_MARKS__c  /  TOTAL_MARKS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PERCENTAGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>