force-app/main/default/objects/Student__c/fields/PRINCIPLE_NAME__c.field-meta.xml
<CustomField>
    <fullName>PRINCIPLE_NAME__c</fullName>
    <defaultValue>(&quot;MRS POONAM SHARMA&quot;)</defaultValue>
    <label>PRINCIPLE NAME</label>
    <length>250</length>
    <type>Text</type>
</CustomField>