force-app/main/default/objects/Student__c/fields/ROLL_NO__c.field-meta.xml
<CustomField>
    <fullName>ROLL_NO__c</fullName>
    <label>ROLL NO</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>