force-app/main/default/objects/Student__c/fields/Student_Country__c.field-meta.xml
<CustomField>
    <fullName>Student_Country__c</fullName>
    <label>Student Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>