force-app/main/default/objects/Student__c/fields/Student_Location__c.field-meta.xml
<CustomField>
    <fullName>Student_Location__c</fullName>
    <label>Student Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>