force-app/main/default/objects/Student__c/fields/student_Year__c.field-meta.xml
<CustomField>
    <fullName>student_Year__c</fullName>
    <label>student Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Year Student</fullName>
            </value>
            <value>
                <fullName>2nd Year Student</fullName>
            </value>
            <value>
                <fullName>3rd Year Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>