force-app/main/default/objects/Student__c/fields/TOTAL_MARKS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MARKS__c</fullName>
    <defaultValue>500</defaultValue>
    <label>TOTAL MARKS</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>