force-app/main/default/objects/Student__c/fields/X1st_Year_Marks__c.field-meta.xml
<CustomField>
    <fullName>X1st_Year_Marks__c</fullName>
    <label>1st Year Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>