force-app/main/default/objects/Student__c/fields/X1st_Year_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X1st_Year_Percentage__c</fullName>
    <label>1st Year Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>