force-app/main/default/objects/Student__c/fields/X2nd_year_Marks__c.field-meta.xml
<CustomField>
    <fullName>X2nd_year_Marks__c</fullName>
    <label>2nd year Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>