force-app/main/default/objects/Student__c/recordTypes/X1st_Year_Student.recordType-meta.xml
<RecordType>
    <fullName>X1st_Year_Student</fullName>
    <active>true</active>
    <label>1st Year Student</label>
</RecordType>