force-app/main/default/objects/Student__c/recordTypes/X2nd_Year_Student.recordType-meta.xml
<RecordType>
    <fullName>X2nd_Year_Student</fullName>
    <active>true</active>
    <label>2nd Year Student</label>
</RecordType>