force-app/main/default/objects/Student__c/recordTypes/X3rd_Year_Student.recordType-meta.xml
<RecordType>
    <fullName>X3rd_Year_Student</fullName>
    <active>true</active>
    <label>3rd Year Student</label>
</RecordType>