force-app/main/default/objects/Student__c/validationRules/Fees_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_Check</fullName>
    <active>false</active>
    <errorConditionFormula>fees_submitted__c  &gt; 10000</errorConditionFormula>
    <errorMessage>fees can not be greater than 10000</errorMessage>
</ValidationRule>