force-app/main/default/objects/Student__c/validationRules/submitted_fees_check.validationRule-meta.xml
<ValidationRule>
    <fullName>submitted_fees_check</fullName>
    <active>false</active>
    <errorConditionFormula>fees_submitted__c  &lt; 5000</errorConditionFormula>
    <errorDisplayField>fees_submitted__c</errorDisplayField>
    <errorMessage>submitted fees cannot be less than 5000</errorMessage>
</ValidationRule>